--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>Detalle de Empleado</title>
+        <title>Detalle de empleado</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -260,7 +260,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Contactos</h3>
+															<h3 align="center">Listado de contactos</h3>
 															<table id="tablita" class="table table-striped table-bordered" >
 															<thead> 
 															<tr >
@@ -324,7 +324,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Dependientes</h3>
+															<h3 align="center">Listado de dependientes</h3>
 															<table id="tablita1" class="table table-striped table-bordered" >
 															<thead> 
 															<tr >
@@ -382,7 +382,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Formacion academica</h3>
+															<h3 align="center">Listado formacion academica</h3>
 															<table id="tablita2" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -445,7 +445,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Capacitaciones recibidas</h3>
+															<h3 align="center">Listado de capacitaciones recibidas</h3>
 															<table id="tablita3" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -507,7 +507,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Experiencia laboral</h3>
+															<h3 align="center">Listad de experiencia laboral</h3>
 															<table id="tablita4" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -571,7 +571,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Ubicacion física</h3>
+															<h3 align="center">Listado de bicaciones físicas</h3>
 															<table id="tablita5" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -631,7 +631,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Contrato</h3>
+															<h3 align="center">Listado de contratos</h3>
 															<table id="tablita6" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -693,7 +693,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Hijos con discapacidad</h3>
+															<h3 align="center">Listado de hijos con discapacidad</h3>
 															<table id="tablita7" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -753,7 +753,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Idiomas</h3>
+															<h3 align="center">Listado de idiomas</h3>
 															<table id="tablita8" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
@@ -817,7 +817,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Beneficios</h3>
+															<h3 align="center">Listado de beneficios</h3>
 															<table id="tablita9" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
