--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Detalle de Empleado</title>
+        <title>Detalle de empleado</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
