agregando mensaje de carga despues de un registro exitoso

--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -67,6 +67,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../asistenciacapacitaciones/';
+    swal({
+       text: "Redirigiendo a consulta de asistencia capacitaciones",
+       icon: "success"
+    })
     });
     }
 
@@ -106,6 +110,10 @@
             icon: "success",
     }).then(function() {
     location.href = '../../asistenciacapacitaciones/';
+    swal({
+       text: "Redirigiendo a consulta de asistenciacapacitaciones",
+       icon: "success"
+    })
     });
     }
     if ([[${msg}]] === 0){
