--- a/src/main/resources/templates/fragments/asistenciacapacitacion/empleadoasistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/empleadoasistenciacapacitaciones.html
@@ -73,6 +73,10 @@
             icon: "success",
     }).then(function() {
     location.href = '../empleadoasistenciacapacitaciones/';
+    swal({
+       text: "Redirigiendo a consulta de empleadoasistenciacapacitaciones",
+       icon: "success"
+    })
     });
     }
 
