--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -140,6 +140,10 @@
                 icon: "success"
        }).then(function() {
                 location.href = '../beneficios/';
+                swal({
+       text: "Redirigiendo a consulta de beneficios",
+       icon: "success"
+    })
        }); 
 }
     
