--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -60,6 +60,10 @@
                 icon: "success",
         }).then(function() {
         location.href = '../../beneficios/';
+        swal({
+       text: "Redirigiendo a consulta de beneficios",
+       icon: "success"
+    })
         });
         }
         if ([[${msg}]] === 4){
