--- a/src/main/resources/templates/fragments/beneficio/beneficioss.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioss.html
@@ -33,6 +33,10 @@
                 icon: "success",
         }).then(function() {
          location.href = '../../../empleados/show/'+[[${empleado}]];
+         swal({
+       text: "Redirigiendo a consulta de empleados",
+       icon: "success"
+    })
         });
         }
         if ([[${msg}]] === 4){
