--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -272,6 +272,10 @@
                 icon: "success"
        }).then(function() {
                 location.href = '../capacitaciones/';
+                swal({
+       text: "Redirigiendo a consulta de capacitaciones",
+       icon: "success"
+    })
        }); 
 }
     
