--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -79,7 +79,11 @@
                 type: "success",
                 icon: "success"
         }).then(function() {
-        location.href = '../comites/';
+        location.href = '../capacitadores/';
+        swal({
+       text: "Redirigiendo a consulta de capacitadores",
+       icon: "success"
+    })
         });
         }
 
@@ -111,7 +115,11 @@
                 type: "success",
                 icon: "success",
         }).then(function() {
-        location.href = '../../comites/';
+        location.href = '../../capacitadores/';
+        swal({
+       text: "Redirigiendo a consulta de capacitadores",
+       icon: "success"
+    })
         });
         }
 
