--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -132,6 +132,10 @@
                 icon: "success"
        }).then(function() {
                 location.href = '../comisiones/';
+                   swal({
+                    text: "Redirigiendo a consulta de comisiones",
+                    icon: "success"
+                    })
        }); 
 }
     
