--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -149,6 +149,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../comites/';
+           swal({
+       text: "Redirigiendo a consulta de comites",
+       icon: "success"
+    })
         });
         }
 
