--- a/src/main/resources/templates/fragments/contrato/contratoform.html
+++ b/src/main/resources/templates/fragments/contrato/contratoform.html
@@ -376,6 +376,10 @@ $(function () {
                 icon: "success"
        }).then(function() {
                 location.href = '../empleados/';
+                   swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
        }); 
 }
     
