--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -112,6 +112,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../costocapacitaciones/';
+           swal({
+       text: "Redirigiendo a consulta de costocapacitaciones",
+       icon: "success"
+    })
         });
         }
 
