--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -93,6 +93,11 @@
                 type: "success",
                 icon: "success"
         }).then(function() {
+            location.href = '../cuadrodirectivos/';
+               swal({
+                text: "Redirigiendo a consulta de cuadro directivos",
+                icon: "success"
+                })
         });
         }
         if ([[${msg}]] === 1){
