--- a/src/main/resources/templates/fragments/descuento/descuentoform.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoform.html
@@ -144,6 +144,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../descuentos/';
+        swal({
+                text: "Redirigiendo a consulta de descuentos",
+                icon: "success"
+                })
         });
         }
 
