--- a/src/main/resources/templates/fragments/descuento/descuentos.html
+++ b/src/main/resources/templates/fragments/descuento/descuentos.html
@@ -84,6 +84,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../descuentos/';
+        swal({
+                text: "Redirigiendo a consulta de descuentos",
+                icon: "success"
+                })
         });
         }
        
