--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitaciones.html
@@ -64,6 +64,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../diagnosticocapacitaciones/';
+    swal({
+                text: "Redirigiendo a consulta de diagnosticos de capacitaciones",
+                icon: "success"
+                })
     });
     }
 
