--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -647,6 +647,10 @@
                 icon: "success"
        }).then(function() {
                  location.href = '../empleados/';
+                 swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
        }); 
 }
     
