--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
@@ -75,6 +75,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../empleadocapacitaciones/';
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
      if ([[${msg}]] === 1){
