--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -83,6 +83,10 @@
             type: "success"
     }).then(function() {
     location.href = '../estados/';
+    swal({
+                text: "Redirigiendo a consulta de estados",
+                icon: "success"
+                })
     });
     }
 
