--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -63,6 +63,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../evaluacioncapacitaciones/';
+        swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
         });
         }
 
