--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -426,6 +426,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../evaluacioncapacitaciones/';
+    swal({
+                text: "Redirigiendo a consulta de evaluacion capacitaciones",
+                icon: "success"
+                })
     });
     }
 
