--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -168,6 +168,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../usuarios/';
+    swal({
+       text: "Redirigiendo a consulta de usuario",
+       icon: "success"
+    })
     });
     }
 
