--- a/src/main/resources/templates/fragments/usuario/usuarioformedit.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioformedit.html
@@ -179,6 +179,10 @@ function SwalOverlayColor(){
             icon: "success"
     }).then(function() {
     location.href = '../usuarios/';
+    swal({
+       text: "Redirigiendo a consulta de usuarios",
+       icon: "success"
+    })
     });
     }
 
