--- a/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariorolform.html
@@ -80,6 +80,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../usuarios/';
+    swal({
+       text: "Redirigiendo a consulta de usuarios",
+       icon: "success"
+    })
     });
     }
 
