--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -143,6 +143,10 @@ $(function () {
                 icon: "success"
        }).then(function() {
                 location.href = '../beneficios/';
+                swal({
+       text: "Redirigiendo a consulta de beneficios",
+       icon: "success"
+    })
        }); 
 }
     
