--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidas.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidas.html
@@ -184,6 +184,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+[[${empleado}]];
+       swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 if ([[${msg}]] === 2){
