--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
@@ -258,8 +258,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             type: "success",
             icon: "success"
             }).then(function() {
-//    location.href = '../../empleados/';
- location.href = '../../../empleados/show/'+[[${empleado}]];
+            location.href = '../../../empleados/show/'+[[${empleado}]];
+               swal({
+                text: "Redirigiendo a consulta de empleado",
+                icon: "success"
+                })
     });
     }
 
