--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -63,6 +63,10 @@
                     icon: "success"
             }).then(function() {
             location.href = '../comites/';
+               swal({
+       text: "Redirigiendo a consulta de comites",
+       icon: "success"
+    })
             });
             }
 
