--- a/src/main/resources/templates/fragments/contrato/contratos.html
+++ b/src/main/resources/templates/fragments/contrato/contratos.html
@@ -185,6 +185,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+       swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
     if ([[${msg}]] === 2){
@@ -196,6 +200,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+       swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 
