--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -58,6 +58,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../costocapacitaciones/';
+       swal({
+       text: "Redirigiendo a consulta de costocapacitaciones",
+       icon: "success"
+    })
     });
     }
 
