--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -63,6 +63,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../cuadrodirectivos/';
+    swal({
+                text: "Redirigiendo a consulta de cuadro directivos",
+                icon: "success"
+                })
     });
     }
 
