--- a/src/main/resources/templates/fragments/dependiente/dependientes.html
+++ b/src/main/resources/templates/fragments/dependiente/dependientes.html
@@ -58,6 +58,10 @@
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
 if ([[${msg}]] === 2){
@@ -69,6 +73,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
     if ([[${msg}]] === 1){
