--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -92,6 +92,10 @@
             icon: "success"
     }).then(function() {
     location.href = '../empleadocapacitaciones/';
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
      if ([[${msg}]] === 1){
