--- a/src/main/resources/templates/fragments/experiencialaboral/experiencias.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experiencias.html
@@ -93,6 +93,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
 if ([[${msg}]] === 2){
@@ -104,6 +108,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
     if ([[${msg}]] === 1){
