--- a/src/main/resources/templates/fragments/experiencialaboral/experienciashow.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciashow.html
@@ -263,7 +263,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
                  location.href = '../../../empleados/show/'+[[${empleado}]];
-//    location.href = '../empleados/show/'+ document.getElementById("codem").value;
+                 swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
 
