--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicas.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicas.html
@@ -185,7 +185,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
-    });
+swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
+});
     }
 if ([[${msg}]] === 2){
 
@@ -196,6 +200,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
     if ([[${msg}]] === 1){
