--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadform.html
@@ -301,6 +301,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 icon: "success"
        }).then(function() {
                  location.href = '../../empleados/';
+                 swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
        }); 
 }
     
