--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidads.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidads.html
@@ -94,6 +94,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
 if ([[${msg}]] === 2){
@@ -105,6 +109,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
     if ([[${msg}]] === 1){
