--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
@@ -245,6 +245,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             }).then(function() {
 //    location.href = '../../empleados/';
  location.href = '../../../empleados/show/'+[[${empleado}]];
+ swal({
+                text: "Redirigiendo a consulta de empleados",
+                icon: "success"
+                })
     });
     }
 
