--- a/src/main/resources/templates/fragments/idioma/idiomas.html
+++ b/src/main/resources/templates/fragments/idioma/idiomas.html
@@ -94,6 +94,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 if ([[${msg}]] === 2){
@@ -105,6 +109,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
     if ([[${msg}]] === 1){
@@ -219,6 +227,10 @@ if ([[${msg}]] === 2){
             }).then(function() {
 //    location.href = '../../empleados/';
  location.href = '../../../empleados/show/'+[[${empleado}]];
+ swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 
