--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicas.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicas.html
@@ -184,6 +184,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../../empleados/show/'+ [[${empleado}]];
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 if ([[${msg}]] === 2){
@@ -195,6 +199,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+ [[${empleado}]];
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
     if ([[${msg}]] === 1){
@@ -218,6 +226,10 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
     location.href = '../../../empleados/show/'+[[${empleado}]];
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 
