--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
@@ -260,6 +260,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             icon: "success"
             }).then(function() {
     location.href = '../empleados/show/'+ document.getElementById("codem").value;
+    swal({
+       text: "Redirigiendo a consulta de empleado",
+       icon: "success"
+    })
     });
     }
 
