agregando pantalla de loadign modo generico

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,7 +9,16 @@
 -o-background-size: cover;
 background-size: cover;
 }
-
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('/sisadmrh/image/loading.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: .94;
+}
 .hedfondo{
   background:#82a77d;; 
   /*background-image: url(/sisadmrh/image/background.jpg);*/
