--- a/src/main/resources/templates/fragments/puesto/puestos.html
+++ b/src/main/resources/templates/fragments/puesto/puestos.html
@@ -22,7 +22,7 @@
                 <th>Nombre de  puesto</th>
                 <th>Sueldo base($)</th>
                 <th>Estado</th>
-                <th>Fecha aprobacion </th>
+                <th>Fecha de aprobacion </th>
                 <th>Fecha de baja</th>
                 <th></th>
 		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
@@ -32,7 +32,7 @@
             <tr th:each="puesto : ${puestos}">
                 <td th:text="${puesto.codigopuesto}">codigopuesto</td>
                 <td th:text="${puesto.nombrepuesto}">nombrepuesto</td>
-                <td th:text="${puesto.sueldobase}">sueldobase</td>
+                <td th:text="${#numbers.formatDecimal(puesto.sueldobase, 0, 'COMMA', 2, 'POINT')}">sueldobase</td>
                 <td>
                     <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span>
                     <span th:if="${puesto.estadopuesto} == 2"  th:text="Inactivo"></span>
