--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -43,7 +43,7 @@
                 <div class="form-group">
                     <label class="col-sm-5 control-label">Sueldo base($):</label>
                     <div class="col-sm-7">
-                        <p class="form-control-static" th:text="${puesto.sueldobase}">Sueldo Base</p>
+                        <p class="form-control-static" th:text="${#numbers.formatDecimal(puesto.sueldobase, 0, 'COMMA', 2, 'POINT')}">Sueldo Base</p>
                     </div>
                 </div>
                      
